tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@negating_non_number.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/negating_non_number.txt
---
error: Only numbers can be negated. This is a `array`
 --> negating_non_number.txt:1:6
  |
1 | {{ - vectors }}
  |      ^^^^^^^
